labs/networking/calico-lab-exercise/demo/10-security-controls/default-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  order: 2000
  selector: "projectcalico.org/namespace in {'dev','default'}"
  types:
  - Ingress
  - Egress
